package pj.domain

import pj.domain.Availability
import pj.opaqueTypes.ID.ID
import pj.opaqueTypes.Name.Name

final case class External(id: ID, name: Name, availability: List[Availability])

object External {
  def from(id: ID, name: Name, availability: List[Availability]): External =
    new External(id, name, availability)

  extension (external: External)
    def isValid: Boolean = external.id.isValid && external.name.isValid && external.availability.forall(_.isValid)
}