@startuml

class Teacher {
  id: ID
  name: Name
  availability: Seq[Availability]
}

class Availability {
  start: Time
  end: Time
  preference: Preference
}

class Resource {
  external: List<External>
  teacher: List<Teacher>
}

class External {
  id: ID
  name: Name
  availability: Seq[Availability]
}

class Agenda {
  vivas: Seq[Viva]
  resource: Resource
  duration: ODuration
  preViva: PreViva
  posViva: PosViva
}

class Viva {
  student: Name
  title: Name
  president: President
  advisor: Advisor
  supervisor: Supervisor
  coAdvisor: Coadvisor
}

class President {
  id: ID
}

class Advisor {
  id: ID
}

class Supervisor {
  id: ID
}

class Coadvisor {
  id: ID
}

class RoleLinkedWithResource {
  role: President | Advisor | Supervisor | Coadvisor
  name: Name
  listAvailability: List[Availability]
}

class PreViva {
  student: Name
  title: Name
  roleLinkedWithResourceList: List[RoleLinkedWithResource]
}

class PosViva {
  student: String
  title: String
  start: String
  end: String
  preference: Int
  president: String
  advisor: String
  supervisors: List[String]
  coAdvisors: List[String]
}

class ScheduleOut {
  posVivas: List[PosViva]
}

Teacher "1" *-- "1..*" Availability
External "1" *-- "1..*" Availability
Resource "1" -- "0..*" External
Resource "1" -- "1..*" Teacher
Agenda "1" o-- "1" Resource
Viva "1..*" -- "1" Agenda
Viva "1" o-- "1..*" President
Viva "0..*" -- "1..*" Advisor
Viva "0..*" -- "1..*" Supervisor
Viva "0..*" -- "1..*" Coadvisor
PreViva "1..*" -- "1..*" RoleLinkedWithResource
ScheduleOut "1" *-- "1..*" PosViva
Agenda "1" o-- "1" PreViva
Agenda "1" o-- "1" PosViva

@enduml
